name:                meta-yaml
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/johnw42/meta-yaml#readme
license:             BSD3
license-file:        LICENSE
author:              John Williams
maintainer:          jrw@pobox.com
copyright:           © 2017 John Williams
category:            Utils
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Yaml.Meta.Parser
  build-depends:       base >= 4.7 && < 5
                     , parsec >= 3.1.11
  default-language:    Haskell2010

-- executable meta-yaml-exe
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , meta-yaml
--   default-language:    Haskell2010

test-suite meta-yaml-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Data/Yaml/Meta/ParserSpec.hs
  build-depends:       base
                     , meta-yaml
                     , HUnit >= 1.5.0.0
                     , test-framework >= 0.8.1.1
                     , test-framework-hunit >= 0.3.0.2
                     , parsec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/johnw42/meta-yaml
